--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "axios":"1.7.2"
+    "axios":"1.7.2",
+    "discord.js":"14.15.3"
   },
   "engines": {
     "node": ">=14"
