--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "express": "^4.18.2",
     "axios":"1.7.2",
-    "discord.js":"14.15.3"
+    "discord.js":"14.15.3",
+    "cheerio":"1.0.0-rc.12",
+    "fs":"0.0.1-security"
   },
   "engines": {
     "node": ">=14"
