--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "discord.js":"14.15.3",
     "cheerio":"1.0.0-rc.12",
     "fs":"0.0.1-security",
-    "discord-api-types":"0.37.93"
+    "discord-api-types/v9":"0.37.93"
   },
   "engines": {
     "node": ">=14"
